# license

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: AesEncrypt.cpp  AesEncrypt.h  hardwarecode.cpp  hardwarecode.h  license.cpp  license.h  md5.cpp  md5.h  mini-gmp.cpp  mini-mpq.cpp  rsa.cpp  rsa.h
src/api/: license_api.cpp  license_api.h  license_generate_api.cpp  license_generate_api.h
src/test/: generate_RSA.cpp  generate_hardwarecode.cpp  generate_license.cpp  test.cpp  test_license_api.cpp
